--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>GT7sgrs - ホーム</title>
   </head>
   <body>
-    <h1>GT7sgrs</h1>
-    <h4>2025年のGT7sgrsは全9戦。\n次戦・第5戦は9月13～14日、鈴鹿サーキットでの開催です！</h4>
+    <title>GT7sgrs</title>
+    <h4>2025年のGT7sgrsは全9戦。<br>次戦・第5戦は9月13～14日、鈴鹿サーキットでの開催です！</h4>
   </body>
 </html>
