--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GT7sgrs - ホーム</title>
   </head>
   <body>
-    <SiteTitle>GT7sgrs</SiteTitle>
+    <h1><SiteTitle>GT7sgrs</SiteTitle></h1>
     <h4>2025年のGT7sgrsは全9戦。<br>次戦・第5戦は9月13～14日、鈴鹿サーキットでの開催です！</h4>
   </body>
 </html>
