--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>GT7sgrs - ホーム</title>
   </head>
   <body>
-    <h1><SiteTitle>GT7sgrs</SiteTitle></h1>
-    <h4>2025年のGT7sgrsは全9戦。<br>次戦・第5戦は9月13～14日、鈴鹿サーキットでの開催です！</h4>
+    <div class="SiteTitle">GT7sgrs</div>
+    <div class="HorizonBox">
+      <img class="IntroImage" src="resource/image/home/1.png" alt="第4戦、GT300のトップ争い。"/>
+      <img class="IntroImage" src="resource/image/home/2.png" alt="第4戦、GT500ウィナー、32号車Z。"/>
+      <img class="IntroImage" src="resource/image/home/3.png" alt="第4戦、GT300ウィナー、60号車AMG。"/>
+      <img class="IntroImage" src="resource/image/home/4.png" alt="第4戦、4・14・32号車によるスリーワイド。"/>
+    </div>
+    <div class="MainText">2025年のGT7sgrsは全9戦。<br>次戦・第5戦は9月13～14日、鈴鹿サーキットでの開催です！</div>
   </body>
 </html>
