--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <title>GT7sgrs - ホーム</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon"/>
   </head>
   <body>
     <div class="SiteTitle">GT7sgrs</div>
