--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon"/>
   </head>
   <body>
+    <div class="Tab">
+      <button onclick="location.href='result/result.html'" class="TabLink">レース結果</button>
+      <button onclick="" class="TabLink">スケジュール</button>
+    </div>
     <div class="SiteTitle">GT7sgrs</div>
     <div class="HorizonBox">
       <img class="IntroImage" src="resource/image/home/1.png" alt="第4戦、GT300のトップ争い。"/>
@@ -15,6 +19,7 @@
       <img class="IntroImage" src="resource/image/home/3.png" alt="第4戦、GT300ウィナー、60号車AMG。"/>
       <img class="IntroImage" src="resource/image/home/4.png" alt="第4戦、4・14・32号車によるスリーワイド。"/>
     </div>
-    <div class="MainText">2025年のGT7sgrsは全9戦。<br>次戦・第5戦は9月13～14日、鈴鹿サーキットでの開催です！</div>
+    <hr>
+    <div class="SubHeader">News</div>
   </body>
 </html>
