--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="Tab">
-      <button onclick="location.href='result/result.html'" class="TabLink">レース結果</button>
+      <button onclick="location.href='result.html'" class="TabLink">レース順位</button>
       <button onclick="" class="TabLink">スケジュール</button>
     </div>
     <div class="SiteTitle">GT7sgrs</div>
