--- a/result.html
+++ b/result.html
@@ -51,7 +51,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">1</td>
-            <td class="Table_Align_Center">53</td>
+            <td class="Table_Standing_500">53</td>
             <td class="Table_Align_Left">ケダカキハシャ</td>
             <td class="Table_Align_Right">15</td>
             <td class="Table_Align_Right">23</td>
@@ -67,7 +67,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">2</td>
-            <td class="Table_Align_Center">32</td>
+            <td class="Table_Standing_500">32</td>
             <td class="Table_Align_Left">翔</td>
             <td class="Table_Align_Right">11</td>
             <td class="Table_Align_Right">6</td>
@@ -83,7 +83,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">3</td>
-            <td class="Table_Align_Center">76</td>
+            <td class="Table_Standing_500">76</td>
             <td class="Table_Align_Left">うみねこ</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right">16</td>
@@ -99,7 +99,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">4</td>
-            <td class="Table_Align_Center">14</td>
+            <td class="Table_Standing_500">14</td>
             <td class="Table_Align_Left">ASUMU</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -115,7 +115,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">5</td>
-            <td class="Table_Align_Center">12</td>
+            <td class="Table_Standing_500">12</td>
             <td class="Table_Align_Left">シュンマッハ</td>
             <td class="Table_Align_Right">5</td>
             <td class="Table_Align_Right">5</td>
@@ -131,7 +131,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">6</td>
-            <td class="Table_Align_Center">46</td>
+            <td class="Table_Standing_500">46</td>
             <td class="Table_Align_Left">パトリック・マーチ</td>
             <td class="Table_Align_Right">21</td>
             <td class="Table_Align_Right">11</td>
@@ -147,7 +147,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">7</td>
-            <td class="Table_Align_Center">5</td>
+            <td class="Table_Standing_500">5</td>
             <td class="Table_Align_Left">こーき</td>
             <td class="Table_Align_Right">10</td>
             <td class="Table_Align_Right">3</td>
@@ -163,7 +163,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">8</td>
-            <td class="Table_Align_Center">4</td>
+            <td class="Table_Standing_500">4</td>
             <td class="Table_Align_Left">ぷでぃん</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -179,7 +179,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">9</td>
-            <td class="Table_Align_Center">100</td>
+            <td class="Table_Standing_500">100</td>
             <td class="Table_Align_Left">有楽サトリ</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -195,7 +195,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">10</td>
-            <td class="Table_Align_Center">69</td>
+            <td class="Table_Standing_500">69</td>
             <td class="Table_Align_Left">いぬ</td>
             <td class="Table_Align_Right">1</td>
             <td class="Table_Align_Right">10</td>
@@ -211,7 +211,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">11</td>
-            <td class="Table_Align_Center">42</td>
+            <td class="Table_Standing_500">42</td>
             <td class="Table_Align_Left">鋤柄 諒弥</td>
             <td class="Table_Align_Right">7</td>
             <td class="Table_Align_Right">4</td>
@@ -227,7 +227,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">12</td>
-            <td class="Table_Align_Center">23</td>
+            <td class="Table_Standing_500">23</td>
             <td class="Table_Align_Left">Ral</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -243,7 +243,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">13</td>
-            <td class="Table_Align_Center">41</td>
+            <td class="Table_Standing_500">41</td>
             <td class="Table_Align_Left">紅丸</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right">2</td>
@@ -259,7 +259,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">14</td>
-            <td class="Table_Align_Center">255</td>
+            <td class="Table_Standing_500">255</td>
             <td class="Table_Align_Left">ほわいとちょこ</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -275,7 +275,7 @@
           </tr>   
           <tr>
             <td class="Table_Align_Center">15</td>
-            <td class="Table_Align_Center">41</td>
+            <td class="Table_Standing_500">41</td>
             <td class="Table_Align_Left">叢雲</td>
             <td class="Table_Align_Right">6</td>
             <td class="Table_Align_Right"></td>
@@ -291,7 +291,7 @@
           </tr>       
           <tr>
             <td class="Table_Align_Center">16</td>
-            <td class="Table_Align_Center">19</td>
+            <td class="Table_Standing_500">19</td>
             <td class="Table_Align_Left">Stadra</td>
             <td class="Table_Align_Right">3</td>
             <td class="Table_Align_Right"></td>
@@ -307,7 +307,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">17</td>
-            <td class="Table_Align_Center">7</td>
+            <td class="Table_Standing_500">7</td>
             <td class="Table_Align_Left">Bluebird</td>
             <td class="Table_Align_Right">2</td>
             <td class="Table_Align_Right"></td>
@@ -323,7 +323,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">18</td>
-            <td class="Table_Align_Center">99</td>
+            <td class="Table_Standing_500">99</td>
             <td class="Table_Align_Left">すた</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -339,7 +339,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">19</td>
-            <td class="Table_Align_Center">244</td>
+            <td class="Table_Standing_500">244</td>
             <td class="Table_Align_Left">あずーら</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right">1</td>
@@ -355,7 +355,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">20</td>
-            <td class="Table_Align_Center">2</td>
+            <td class="Table_Standing_500">2</td>
             <td class="Table_Align_Left">ダニール・リコアト</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -371,7 +371,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">21</td>
-            <td class="Table_Align_Center">6</td>
+            <td class="Table_Standing_500">6</td>
             <td class="Table_Align_Left">鷹の爪</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -387,7 +387,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">22</td>
-            <td class="Table_Align_Center">11</td>
+            <td class="Table_Standing_500">11</td>
             <td class="Table_Align_Left">カズマ</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -403,7 +403,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">23</td>
-            <td class="Table_Align_Center">14</td>
+            <td class="Table_Standing_500">14</td>
             <td class="Table_Align_Left">soil609</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -419,7 +419,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">24</td>
-            <td class="Table_Align_Center">16</td>
+            <td class="Table_Standing_500">16</td>
             <td class="Table_Align_Left">せるらー</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -435,7 +435,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">25</td>
-            <td class="Table_Align_Center">17</td>
+            <td class="Table_Standing_500">17</td>
             <td class="Table_Align_Left">はんぐりー</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -451,7 +451,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">26</td>
-            <td class="Table_Align_Center">20</td>
+            <td class="Table_Standing_500">20</td>
             <td class="Table_Align_Left">ゆうくん</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -467,7 +467,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">27</td>
-            <td class="Table_Align_Center">28</td>
+            <td class="Table_Standing_500">28</td>
             <td class="Table_Align_Left">くま吉</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
@@ -483,7 +483,7 @@
           </tr>
           <tr>
             <td class="Table_Align_Center">28</td>
-            <td class="Table_Align_Center">82</td>
+            <td class="Table_Standing_500">82</td>
             <td class="Table_Align_Left">デネボラ</td>
             <td class="Table_Align_Right"></td>
             <td class="Table_Align_Right"></td>
