--- a/result.html
+++ b/result.html
@@ -14,29 +14,29 @@
       <button onclick="" class="TabLink">スケジュール</button>
     </div>
     <div class="SiteTitle">レース順位 - 2025 GT500 ドライバーズランキング</div>
-    <div>
-      <select id="year-select" class="PullDown" onchange="navigatePage()">
-        <option value="2025">2025</option>
+   <div>
+      <select class="PullDown" onchange="navigatePage(this.value, '', 'GT500')">
+        <option value="2025" selected>2025</option>
         <option value="2024">2024</option>
         <option value="2023">2023</option>
       </select>
-      <select id="round-select" class="PullDown" onchange="navigatePage()">
-        <option value="Rd5">Rd5</option>
+      <select class="PullDown" onchange="navigatePage('2025', this.value, 'GT500')">
+        <option selected value="Rd5">Rd5</option>
         <option value="Rd4">Rd4</option>
         <option value="Rd3">Rd3</option>
       </select>
-      <select id="class-select" class="PullDown" onchange="navigatePage()">
-        <option value="GT500">GT500</option>
-        <option style="background-color: yellow;" value="GT300">GT300</option>
-      </select>
     </div>
     <hr>
+    <div class="ClassTab"> <!--ここはGT500とGT300のやつ-->
+      <a class="ClassTabLink Active500">Driver Ranking GT500</a>
+      <a href="GT300_race.html" class="ClassTabLink Disable300">Driver Ranking GT300</a>
+    </div>
     <div class="Table_Div">
       <table border="1" class="Table">
           <tr>
               <th width="50px">Po.</th>
               <th width="50px">No.</th>
-              <th width="350px">ドライバー</th>
+              <th width="250px">ドライバー</th>
               <th width="50px">Rd1</th>
               <th width="50px">Rd2</th>
               <th width="50px">Rd3</th>
